[package]
name = "solana-accounts-tool"
version = "1.15.0"
description = "Solana Accounts Tool"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/solana-labs/solana"
homepage = "https://solana.com/"
documentation = "https://docs.rs/solana-accounts-tool"
license = "Apache-2.0"
edition = "2021"
