[package]
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
edition = "2021"
name = "solana-accountsdb-plugin-manager"
description = "The Solana AccountsDb plugin manager."
version = "1.10.1"
repository = "https://github.com/solana-labs/solana"
license = "Apache-2.0"
homepage = "https://solana.com/"
documentation = "https://docs.rs/solana-validator"

[dependencies]
bs58 = "0.4.0"
crossbeam-channel = "0.5"
json5 = "0.4.1"
libloading = "0.7.3"
log = "0.4.11"
serde_json = "1.0.78"
solana-accountsdb-plugin-interface = { path = "../accountsdb-plugin-interface", version = "=1.10.1" }
solana-measure = { path = "../measure", version = "=1.10.1" }
solana-metrics = { path = "../metrics", version = "=1.10.1" }
solana-rpc = { path = "../rpc", version = "=1.10.1" }
solana-runtime = { path = "../runtime", version = "=1.10.1" }
solana-sdk = { path = "../sdk", version = "=1.10.1" }
solana-transaction-status = { path = "../transaction-status", version = "=1.10.1" }
thiserror = "1.0.30"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
