[package]
name = "solana-archiver-lib"
version = "1.0.24"
description = "Solana Archiver Library"
authors = ["Solana Maintainers <maintainers@solana.com>"]
repository = "https://github.com/solana-labs/solana"
license = "Apache-2.0"
homepage = "https://solana.com/"
edition = "2018"

[dependencies]
bincode = "1.2.1"
crossbeam-channel = "0.3"
ed25519-dalek = "=1.0.0-pre.3"
log = "0.4.8"
rand = "0.7.0"
rand_chacha = "0.2.2"
solana-client = { path = "../client", version = "1.0.24" }
solana-storage-program = { path = "../programs/storage", version = "1.0.24" }
thiserror = "1.0"
serde = "1.0.104"
serde_json = "1.0.46"
serde_derive = "1.0.103"
solana-net-utils = { path = "../net-utils", version = "1.0.24" }
solana-chacha = { path = "../chacha", version = "1.0.24" }
solana-chacha-sys = { path = "../chacha-sys", version = "1.0.24" }
solana-ledger = { path = "../ledger", version = "1.0.24" }
solana-logger = { path = "../logger", version = "1.0.24" }
solana-perf = { path = "../perf", version = "1.0.24" }
solana-sdk = { path = "../sdk", version = "1.0.24" }
solana-core = { path = "../core", version = "1.0.24" }
solana-archiver-utils = { path = "../archiver-utils", version = "1.0.24" }
solana-metrics = { path = "../metrics", version = "1.0.24" }

[dev-dependencies]
hex = "0.4.0"

[lib]
name = "solana_archiver_lib"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
