[package]
name = "solana-archiver-utils"
version = "1.2.0"
description = "Solana Archiver Utils"
authors = ["Solana Maintainers <maintainers@solana.com>"]
repository = "https://github.com/solana-labs/solana"
license = "Apache-2.0"
homepage = "https://solana.com/"
edition = "2018"

[dependencies]
log = "0.4.8"
rand = "0.6.5"
solana-chacha = { path = "../chacha", version = "1.2.0" }
solana-chacha-sys = { path = "../chacha-sys", version = "1.2.0" }
solana-ledger = { path = "../ledger", version = "1.2.0" }
solana-logger = { path = "../logger", version = "1.2.0" }
solana-perf = { path = "../perf", version = "1.2.0" }
solana-sdk = { path = "../sdk", version = "1.2.0" }

[dev-dependencies]
hex = "0.4.2"

[lib]
name = "solana_archiver_utils"
