[package]
name = "solana-archiver-utils"
version = "1.0.13"
description = "Solana Archiver Utils"
authors = ["Solana Maintainers <maintainers@solana.com>"]
repository = "https://github.com/solana-labs/solana"
license = "Apache-2.0"
homepage = "https://solana.com/"
edition = "2018"

[dependencies]
log = "0.4.8"
rand = "0.6.5"
solana-chacha = { path = "../chacha", version = "1.0.13" }
solana-chacha-sys = { path = "../chacha-sys", version = "1.0.13" }
solana-ledger = { path = "../ledger", version = "1.0.13" }
solana-logger = { path = "../logger", version = "1.0.13" }
solana-perf = { path = "../perf", version = "1.0.13" }
solana-sdk = { path = "../sdk", version = "1.0.13" }

[dev-dependencies]
hex = "0.4.0"

[lib]
name = "solana_archiver_utils"
