[package]
authors = ["Solana Maintainers <maintainers@solana.com>"]
edition = "2018"
name = "solana-archiver"
version = "1.1.2"
repository = "https://github.com/solana-labs/solana"
license = "Apache-2.0"
homepage = "https://solana.com/"

[dependencies]
clap = "2.33.0"
console = "0.10.0"
solana-clap-utils = { path = "../clap-utils", version = "1.1.2" }
solana-core = { path = "../core", version = "1.1.2" }
solana-logger = { path = "../logger", version = "1.1.2" }
solana-metrics = { path = "../metrics", version = "1.1.2" }
solana-archiver-lib = { path = "../archiver-lib", version = "1.1.2" }
solana-net-utils = { path = "../net-utils", version = "1.1.2" }
solana-sdk = { path = "../sdk", version = "1.1.2" }

