[package]
authors = ["Solana Maintainers <maintainers@solana.com>"]
edition = "2018"
name = "solana-archiver"
version = "1.1.8"
repository = "https://github.com/solana-labs/solana"
license = "Apache-2.0"
homepage = "https://solana.com/"

[dependencies]
clap = "2.33.0"
console = "0.10.0"
solana-clap-utils = { path = "../clap-utils", version = "1.1.8" }
solana-core = { path = "../core", version = "1.1.8" }
solana-logger = { path = "../logger", version = "1.1.8" }
solana-metrics = { path = "../metrics", version = "1.1.8" }
solana-archiver-lib = { path = "../archiver-lib", version = "1.1.8" }
solana-net-utils = { path = "../net-utils", version = "1.1.8" }
solana-sdk = { path = "../sdk", version = "1.1.8" }


[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
