[package]
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
edition = "2021"
name = "solana-banking-bench"
version = "1.15.0"
repository = "https://github.com/solana-labs/solana"
license = "Apache-2.0"
homepage = "https://solana.com/"
publish = false

[dependencies]
clap = { version = "3.1.8", features = ["derive"] }
crossbeam-channel = "0.5"
log = "0.4.17"
rand = "0.7.0"
rayon = "1.5.3"
solana-client = { path = "../client", version = "=1.15.0" }
solana-core = { path = "../core", version = "=1.15.0" }
solana-gossip = { path = "../gossip", version = "=1.15.0" }
solana-ledger = { path = "../ledger", version = "=1.15.0" }
solana-logger = { path = "../logger", version = "=1.15.0" }
solana-measure = { path = "../measure", version = "=1.15.0" }
solana-perf = { path = "../perf", version = "=1.15.0" }
solana-poh = { path = "../poh", version = "=1.15.0" }
solana-runtime = { path = "../runtime", version = "=1.15.0" }
solana-sdk = { path = "../sdk", version = "=1.15.0" }
solana-streamer = { path = "../streamer", version = "=1.15.0" }
solana-tpu-client = { path = "../tpu-client", version = "=1.15.0", default-features = false }
solana-version = { path = "../version", version = "=1.15.0" }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
