[package]
name = "banking-trace-tool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = { workspace = true }
chrono = { workspace = true }
clap = { version = "4.3.11", features = ["derive"] }
solana-core = { workspace = true }
