[package]
name = "banking-trace-tool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = { workspace = true }
chrono = { workspace = true }
clap = { version = "4.3.11", features = ["derive"] }
histogram = { workspace = true }
solana-core = { workspace = true }
