[package]
name = "banking-trace-tool"
description = "Blockchain, Rebuilt for Scale"
documentation = "https://docs.rs/banking-trace-tool"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = { workspace = true }
chrono = { workspace = true }
clap = { version = "4.3.11", features = ["derive"] }
histogram = { workspace = true }
itertools = { workspace = true }
plotters = { version = "0.3.5" }
rand = { workspace = true }
solana-core = { workspace = true }
solana-rpc-client = { workspace = true }
solana-rpc-client-api = { workspace = true }
solana-transaction-status = { workspace = true }
solana-sdk = { workspace = true }
