[package]
authors = ["Solana Maintainers <maintainers@solana.com>"]
edition = "2018"
name = "solana-banking-bench"
version = "0.19.1"
repository = "https://github.com/solana-labs/solana"
license = "Apache-2.0"
homepage = "https://solana.com/"

[dependencies]
log = "0.4.6"
rayon = "1.2.0"
solana-core = { path = "../core", version = "0.19.1" }
solana-logger = { path = "../logger", version = "0.19.1" }
solana-runtime = { path = "../runtime", version = "0.19.1" }
solana-measure = { path = "../measure", version = "0.19.1" }
solana-sdk = { path = "../sdk", version = "0.19.1" }
rand = "0.6.5"
crossbeam-channel = "0.3"
