[package]
name = "solana-banks-client"
version = "1.5.15"
description = "Solana banks client"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/solana-labs/solana"
license = "Apache-2.0"
homepage = "https://solana.com/"
documentation = "https://docs.rs/solana-banks-client"
edition = "2018"

[dependencies]
bincode = "1.3.1"
borsh = "0.8.1"
borsh-derive = "0.8.1"
futures = "0.3"
mio = "0.7.6"
solana-banks-interface = { path = "../banks-interface", version = "1.5.15" }
solana-program = { path = "../sdk/program", version = "1.5.15" }
solana-sdk = { path = "../sdk", version = "1.5.15" }
tarpc = { version = "0.23.0", features = ["full"] }
tokio = { version = "0.3.5", features = ["full"] }
tokio-serde = { version = "0.6", features = ["bincode"] }

[dev-dependencies]
solana-runtime = { path = "../runtime", version = "1.5.15" }
solana-banks-server = { path = "../banks-server", version = "1.5.15" }

[lib]
crate-type = ["lib"]
name = "solana_banks_client"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
