[package]
name = "solana-banks-client"
version = "1.11.2"
description = "Solana banks client"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/solana-labs/solana"
license = "Apache-2.0"
homepage = "https://solana.com/"
documentation = "https://docs.rs/solana-banks-client"
edition = "2021"

[dependencies]
borsh = "0.9.3"
futures = "0.3"
solana-banks-interface = { path = "../banks-interface", version = "=1.11.2" }
solana-program = { path = "../sdk/program", version = "=1.11.2" }
solana-sdk = { path = "../sdk", version = "=1.11.2" }
tarpc = { version = "0.29.0", features = ["full"] }
thiserror = "1.0"
tokio = { version = "~1.14.1", features = ["full"] }
tokio-serde = { version = "0.8", features = ["bincode"] }

[dev-dependencies]
solana-banks-server = { path = "../banks-server", version = "=1.11.2" }
solana-runtime = { path = "../runtime", version = "=1.11.2" }

[lib]
crate-type = ["lib"]
name = "solana_banks_client"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
