[package]
name = "solana-banks-interface"
description = "Solana banks RPC interface"
documentation = "https://docs.rs/solana-banks-interface"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[dependencies]
serde = { version = "1.0.144", features = ["derive"] }
solana-sdk = { path = "../sdk", version = "=1.15.0" }
tarpc = { version = "0.29.0", features = ["full"] }

[lib]
crate-type = ["lib"]
name = "solana_banks_interface"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
