[package]
name = "solana-banks-interface"
version = "1.16.0"
description = "Solana banks RPC interface"
authors = ["Solana Labs Maintainers <maintainers@solanalabs.com>"]
repository = "https://github.com/solana-labs/solana"
license = "Apache-2.0"
homepage = "https://solanalabs.com/"
documentation = "https://docs.rs/solana-banks-interface"
edition = "2021"

[dependencies]
serde = { version = "1.0.152", features = ["derive"] }
solana-sdk = { path = "../sdk", version = "=1.16.0" }
tarpc = { version = "0.29.0", features = ["full"] }

[lib]
crate-type = ["lib"]
name = "solana_banks_interface"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
