[package]
name = "solana-banks-server"
version = "1.7.0"
description = "Solana banks server"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/solana-labs/solana"
license = "Apache-2.0"
homepage = "https://solana.com/"
documentation = "https://docs.rs/solana-banks-server"
edition = "2018"

[dependencies]
bincode = "1.3.1"
futures = "0.3"
log = "0.4.11"
mio = "0.7.6"
solana-banks-interface = { path = "../banks-interface", version = "1.7.0" }
solana-runtime = { path = "../runtime", version = "1.7.0" }
solana-sdk = { path = "../sdk", version = "1.7.0" }
solana-metrics = { path = "../metrics", version = "1.7.0" }
tarpc = { version = "0.24.1", features = ["full"] }
tokio = { version = "1.1", features = ["full"] }
tokio-serde = { version = "0.8", features = ["bincode"] }
tokio-stream = "0.1"

[lib]
crate-type = ["lib"]
name = "solana_banks_server"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
