[package]
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
edition = "2018"
name = "solana-bench-exchange"
version = "1.5.7"
repository = "https://github.com/solana-labs/solana"
license = "Apache-2.0"
homepage = "https://solana.com/"
publish = false

[dependencies]
clap = "2.33.1"
itertools = "0.9.0"
log = "0.4.11"
num-derive = "0.3"
num-traits = "0.2"
rand = "0.7.0"
rayon = "1.4.0"
serde_json = "1.0.56"
serde_yaml = "0.8.13"
solana-clap-utils = { path = "../clap-utils", version = "1.5.7" }
solana-core = { path = "../core", version = "1.5.7" }
solana-genesis = { path = "../genesis", version = "1.5.7" }
solana-client = { path = "../client", version = "1.5.7" }
solana-faucet = { path = "../faucet", version = "1.5.7" }
solana-exchange-program = { path = "../programs/exchange", version = "1.5.7" }
solana-logger = { path = "../logger", version = "1.5.7" }
solana-metrics = { path = "../metrics", version = "1.5.7" }
solana-net-utils = { path = "../net-utils", version = "1.5.7" }
solana-runtime = { path = "../runtime", version = "1.5.7" }
solana-sdk = { path = "../sdk", version = "1.5.7" }
solana-version = { path = "../version", version = "1.5.7" }

[dev-dependencies]
solana-local-cluster = { path = "../local-cluster", version = "1.5.7" }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
