[package]
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
edition = "2021"
name = "solana-bench-streamer"
version = "1.11.9"
repository = "https://github.com/solana-labs/solana"
license = "Apache-2.0"
homepage = "https://solana.com/"
publish = false

[dependencies]
clap = { version = "3.1.5", features = ["cargo"] }
crossbeam-channel = "0.5"
solana-net-utils = { path = "../net-utils", version = "=1.11.9" }
solana-streamer = { path = "../streamer", version = "=1.11.9" }
solana-version = { path = "../version", version = "=1.11.9" }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
