[package]
name = "solana-bench-streamer"
publish = false
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[dependencies]
clap = { version = "3.1.5", features = ["cargo"] }
crossbeam-channel = "0.5"
solana-net-utils = { path = "../net-utils", version = "=1.15.0" }
solana-streamer = { path = "../streamer", version = "=1.15.0" }
solana-version = { path = "../version", version = "=1.15.0" }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
