[package]
name = "solana-bloom"
description = "Solana bloom filter"
documentation = "https://docs.rs/solana-bloom"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
bv = { workspace = true, features = ["serde"] }
fnv = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
serde = { workspace = true, features = ["rc"] }
serde_derive = { workspace = true }
solana-frozen-abi = { workspace = true, optional = true, features = [
    "frozen-abi",
] }
solana-frozen-abi-macro = { workspace = true, optional = true, features = [
    "frozen-abi",
] }
solana-sanitize = { workspace = true }
solana-sdk = { workspace = true }

[dev-dependencies]
rayon = { workspace = true }

[lib]
crate-type = ["lib"]
name = "solana_bloom"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[features]
frozen-abi = [
    "dep:solana-frozen-abi",
    "dep:solana-frozen-abi-macro",
    "solana-sdk/frozen-abi",
]

[lints]
workspace = true
